--- a/src/app/inhouse/comments/comments.component.html
+++ b/src/app/inhouse/comments/comments.component.html
@@ -52,7 +52,7 @@
                 <tbody>
                     <tr class="table_bg" *ngFor="let list of lists; let i = index">
                             <input type="hidden" value="R" #status >   
-                            <td class="txt_c" >{{i + 1}}</td> 
+                            <td><span>{{i + 1}}</span></td> 
                             <td>
                                 <span class="bdnone" *ngIf="status.value === 'R'">{{list.type}}</span>
                                 <span class="bdnone" *ngIf="status.value === 'U'"><input type="text"  class="clr-input wid120" value="{{list.type}}" id="type{{list.id}}"  ></span> 
