--- a/src/app/home/components/manage-functions/manage-functions.component.html
+++ b/src/app/home/components/manage-functions/manage-functions.component.html
@@ -1,1 +1,65 @@
-<p>manage-functions works!</p>
+<div id="container">
+    <div id="content">
+        <table width="100%" border="0" cellspacing="0" cellpadding="0" class="mg_b10">
+            <tr>
+                <td  class="mail_title">Function Management</td>
+                <td class="main_btn">  
+                </td>
+            </tr>
+        </table>
+        
+        <div class="box mg_b20 pd_20">
+            <input type="date" [value]="startToday()" class="input_01" #start  style="width:180px;"/> ~ 
+            <input type="date" [value]="endToday()" class="input_01"   #end   style="width:180px;"/> &nbsp;&nbsp;&nbsp;  
+            <input type="text" placeholder="함수명" class="input_01" #functionName />&nbsp;&nbsp; 
+            <button type="button" class="btn btn_02" (click)="search(start.value, end.value, functionName.value)" >SEARCH</button>
+        </div>
+        <div> Total: {{totRecords}} Records  ({{curPage}} / {{totPage}}) Pages  </div>    
+        <div class="box">
+            <table border="0" cellpadding="0" cellspacing="0" class="table_list">
+                <colgroup>
+                <col style="width:5%;" />
+                <col style="width:55%;" /> 
+                <col style="width:20%;" /> 
+                <col style="width:10%;" />
+                <col style="width:10%;" />
+                </colgroup>
+                <thead>
+                    <tr>
+                        <th class="txt_l">No</th>
+                        <th>함수명</th> 
+                        <th>수정일자</th>
+                        <th>적용상태</th> 
+                        <th class="txt_r">상세보기</th> 
+                    </tr>
+                </thead>
+                <tbody> 
+                    <tr [ngClass]="toggle(i)"  *ngFor="let list of lists; let i = index">    
+                        <td class="txt_l" ><span>{{ (curPage-1)*10 + i + 1}}</span></td> 
+                        <td class="txt_l" ><span><a (click)="detail(list.function_id)">{{list.function_name}}</a></span></td> 
+                        <td class="txt_c" ><span>{{list.update_date}}</span></td> 
+                        <td class="txt_c" >
+                            <span *ngIf="list.service_status =='0'">미적용</span>
+                            <span *ngIf="list.service_status =='1'">적용</span>    
+                        </td>  
+                        <td class="txt_c" ><a class="btn btn_04" (click)="detail(list.function_id)">상세보기</a></td> 
+                    </tr>  
+                </tbody>
+            </table>
+        </div>
+        <div class="txt_c pd_t20 btn_num">
+            <a class="ico_pre" (click)="goPage('<')" >이전</a>   
+            <span *ngFor="let i of [1,2,3,4,5,6,7,8,9,10]">  
+                <span   *ngIf="i + (pageLine*10) <= totPage">   
+                    <span *ngIf="i + (pageLine*10) == curPage">
+                        <a  (click)="goPage(i + (pageLine*10))"><span class="btn_select">{{i + (pageLine*10)}}</span></a>
+                    </span>
+                    <span *ngIf="i + (pageLine*10) != curPage">
+                        <a  (click)="goPage(i + (pageLine*10))"><span>{{i + (pageLine*10)}}</span></a>
+                    </span> 
+                </span>    
+            </span> 
+            <a class="ico_next" (click)="goPage('>')" >다음</a> 
+        </div>  
+    </div>
+</div>
