--- a/src/app/inhouse/mutation/mutation.component.scss
+++ b/src/app/inhouse/mutation/mutation.component.scss
@@ -1,53 +1,65 @@
-  .btn-edit, .btn-delete, .btn-cancel, .btn-save {
-      display: inline-block;
-      width: 24px;
-      height: 24px;
-      font-size: 0;
-      margin-left: 3px;
-      border-radius: 3px;
-  }
-  
-  .btn-edit {
-      background: url(../images/edit.png);
-      background-size: 20px;
-      background-position: center;
-      background-repeat: no-repeat;
-  //    background-color: #2090e9;
-  }
-  
-  .btn-delete {
-      background: url(../images/trash.png);
-      background-size: 20px;
-      background-position: center;
-      background-repeat: no-repeat;
-  //    background-color: rgb(141, 141, 141);
-  }
-  
-  .btn-cancel {
-      background: url(../images/cancel.png);
-      background-size: 20px;
-      background-position: center;
-      background-repeat: no-repeat;
-  //    background-color: rgb(141, 141, 141);
-  }
-  
-  .btn-save {
-      background: url(../images/save.png);
-      background-size: 20px;
-      background-position: center;
-      background-repeat: no-repeat;
-  //    background-color: #2090e9;
-  }
-  
-  .table_bg > .txt_c {
-      padding: 0;
-      border-top: none !important;
-  }
-  
-  .txt_c > p {
-      margin-top: 0;
-  }
-  .input_01 {
-     height: 30px;
-     margin : 10px;
-  }
+.btn-edit, .btn-delete, .btn-cancel, .btn-save {
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    font-size: 0;
+    margin-left: 3px;
+    border-radius: 3px;
+}
+
+.btn-edit {
+    background: url(../images/edit.png);
+    background-size: 20px;
+    background-position: center;
+    background-repeat: no-repeat;
+//    background-color: #2090e9;
+}
+
+.btn-delete {
+    background: url(../images/trash.png);
+    background-size: 20px;
+    background-position: center;
+    background-repeat: no-repeat;
+//    background-color: rgb(141, 141, 141);
+}
+
+.btn-cancel {
+    background: url(../images/cancel.png);
+    background-size: 20px;
+    background-position: center;
+    background-repeat: no-repeat;
+//    background-color: rgb(141, 141, 141);
+}
+
+.btn-save {
+    background: url(../images/save.png);
+    background-size: 20px;
+    background-position: center;
+    background-repeat: no-repeat;
+//    background-color: #2090e9;
+}
+
+.table_bg > .txt_c {
+    padding: 0;
+    border-top: #e0e0e0 solid 1px;
+    line-height: 50px;
+}
+
+.txt_c > p {
+    margin-top: 0;
+}
+.input_01 {
+   height: 30px;
+   margin : 10px;
+   border : none;
+}
+
+.clr-input {
+  box-shadow: none;
+  height: 1.2rem;
+  color: var(--clr-forms-text-color, black);
+  border-bottom-color: var(--clr-forms-border-color, #b3b3b3);
+  border-bottom:none !important;   
+  display: inline-block; 
+  max-height: 1.2rem;
+}
